# gob2

./: Makefile  README.md  gob2.spec
src/: COPYING.generated-code  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.in  gob2.spec  gob2.spec.in
src/doc/: Makefile.am  Makefile.in  gob2.1.in  makehtml.pl
src/examples/: GNOME_Foo_SomeInterface.idl  Makefile.am  Makefile.in  README  foo-some-interface.gob  gtk-button-count.gob  my-glade-main.c  my-glade.glade  my-glade.gob  my-person.gob
src/src/: Makefile.am  Makefile.in  Makefile.str  checks.c  checks.h  generate_treefuncs.pl  lexer.c  lexer.l  main.c  main.h  out.c  out.h  parse.c  parse.h  parse.y  str.gob  str_test.c  test.gob  treefuncs.c  treefuncs.def  treefuncs.h  util.c  util.h
